--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-torch
-torchvision
-sklearn
-matplotlib
-PyYAML
-opencv-python
-scipy
+torch==1.6.0
+torchvision==0.7.0
+sklearn==0.0
+matplotlib==3.3.0
+PyYAML==5.3.1
+opencv-python==4.4.0.46
+scipy==1.5
