--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -1,6 +1,6 @@
 # Data parameters
 experiment_name: 'local_equal_net'
-dataset_name: mhsma # [mnist, fashionmnist, cifar10, mvtec, retina]
+dataset_name: mnist # [mnist, fashionmnist, cifar10, mvtec, retina]
 last_checkpoint: 201
 
 
